# ampire

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.html  README.md  README.org
src/: ampire-display.c  ampire-io.c  ampire-main.c  ampire-ncurses-helpers.c  ampire-utils.c  cmus-display.c  cmus-io.c  cmus-main.c  debug.rl  display.c  io.c  main.c  strmap.c
src/include/: ampire-display.h  ampire-flag.h  ampire-global.h  ampire-io.h  ampire-ncurses-helpers.h  ampire-utils.h  config.h  flag.h  utils.h
src/include/ds/: array.h  strmap.h
